# LLM_journey

./: .gitignore  .python-version  pyproject.toml
milestone_01_classical_ml/: evaluate.py
milestone_01_classical_ml/rust/classical_machine_learning/: Cargo.toml
milestone_01_classical_ml/rust/classical_machine_learning/src/: common_types.rs  lib.rs
milestone_01_classical_ml/rust/classical_machine_learning/src/knn/: ball_tree.rs  heap_utils.rs  kd_tree.rs  mod.rs
milestone_01_classical_ml/rust/classical_machine_learning/src/svm/: mod.rs  svm.rs
milestone_01_classical_ml/rust/classical_machine_learning/src/trees/: decision_tree.rs
